update post and about

--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ description: 徐晓庆的博客 编程爱好者
 # baseurl: "" # the subpath of your site, e.g. /blog/
 # url: "http://yourdomain.com" # the base hostname & protocol for your site
 # twitter_username: jekyllrb
-github_username:  Xuxiaoqing
+github_username:  snowdream1314
 permalink: /:year/:month/:day/:title/
 
 # Build settings
